--- a/index.html
+++ b/index.html
@@ -500,10 +500,42 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="licensy">
-          <img src="images/icon/logo.svg" alt="" class="licensy__image">
-          <p class="licensy__text licensy__text_mrg">2021 - Все права защищены и принадлежат владельцу.</p>
-          <a href="/" class="licensy__text text-red">Политика конфиденциальности</a>
+        <picture class="footer__logo">
+          <source srcset="images/icon/logo.svg" type="image/svg+xml">
+          <img loading="lazy" src="images/logo.png" alt="120/80">
+        </picture>
+        <p class="footer__info">2022. Все права защищены и принадлежат владельцу</p>
+        <p class="footer__info">В случае возникновения проблем или вопросов пишите на - <a href="mailto:support@supcours.ru">support@supcours.ru</a></p>
+        <div class="requisites">
+          <div class="requisites__block">
+            <p class="reqisites__text">ООО «АВОКАДО»</p>
+            <p class="reqisites__text">ИНН: 5446020349</p>
+            <p class="reqisites__text">ОГРН: 1195476030738</p>
+            <p class="reqisites__text">Телефон: +7 (977) 852-93-47</p>
+            <p class="reqisites__text">E-mail: <a href="mailto:support@supcours.ru">support@supcours.ru</a></p>
+          </div>
+          <div class="requisites__block">
+            <p class="reqisites__head">ПЛАТЕЖ ЗАЩИЩЕН</p>
+            <div class="requisites__images">
+              <img src="images/pay/pay1.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay2.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay3.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay4.png" alt="" class="requisites__picture">
+            </div>
+            <p class="reqisites__head">ПРИНИМАЕМ К ОПЛАТЕ:</p>
+            <div class="requisites__images">
+              <img src="images/pay/pay5.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay6.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay7.png" alt="" class="requisites__picture">
+            </div>
+          </div>
+          <div class="requisites__block requisites__block_last">
+            <a href="https://179523.selcdn.ru/public/rp/bs-offer-policy.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Политика конфиденциальности</a>
+            <a href="https://179523.selcdn.ru/public/rp/offer.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Оферта</a>
+            <a href="delete.html" target="_blank" class="footer__privacy footer__privacy_reqv">Отмена подписки</a>
+            <a href="https://179523.selcdn.ru/public/rp/permission.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Политика обработки данных</a>
+            <a href="https://179523.selcdn.ru/public/rp/tariff.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Тарифы</a>
+          </div>
         </div>
       </div>
     </footer>
@@ -526,6 +558,47 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <picture class="footer__logo">
+          <source srcset="images/icon/logo.svg" type="image/svg+xml">
+          <img loading="lazy" src="images/logo.png" alt="120/80">
+        </picture>
+        <p class="footer__info">2022. Все права защищены и принадлежат владельцу</p>
+        <p class="footer__info">В случае возникновения проблем или вопросов пишите на - <a href="mailto:support@supcours.ru">support@supcours.ru</a></p>
+        <div class="requisites">
+          <div class="requisites__block">
+            <p class="reqisites__text">ООО «АВОКАДО»</p>
+            <p class="reqisites__text">ИНН: 5446020349</p>
+            <p class="reqisites__text">ОГРН: 1195476030738</p>
+            <p class="reqisites__text">Телефон: +7 (977) 852-93-47</p>
+            <p class="reqisites__text">E-mail: <a href="mailto:support@supcours.ru">support@supcours.ru</a></p>
+          </div>
+          <div class="requisites__block">
+            <p class="reqisites__head">ПЛАТЕЖ ЗАЩИЩЕН</p>
+            <div class="requisites__images">
+              <img src="images/pay/pay1.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay2.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay3.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay4.png" alt="" class="requisites__picture">
+            </div>
+            <p class="reqisites__head">ПРИНИМАЕМ К ОПЛАТЕ:</p>
+            <div class="requisites__images">
+              <img src="images/pay/pay5.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay6.png" alt="" class="requisites__picture">
+              <img src="images/pay/pay7.png" alt="" class="requisites__picture">
+            </div>
+          </div>
+          <div class="requisites__block requisites__block_last">
+            <a href="https://179523.selcdn.ru/public/rp/bs-offer-policy.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Политика конфиденциальности</a>
+            <a href="https://179523.selcdn.ru/public/rp/offer.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Оферта</a>
+            <a href="delete.html" target="_blank" class="footer__privacy footer__privacy_reqv">Отмена подписки</a>
+            <a href="https://179523.selcdn.ru/public/rp/permission.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Политика обработки данных</a>
+            <a href="https://179523.selcdn.ru/public/rp/tariff.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Тарифы</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
   <div class="wrapper wrapper_quest">
     <section class="questions">
@@ -810,6 +883,47 @@
           </div>
           <button class="quest__btn next-step" disabled>Далее</button>
         </div>
+        <footer class="footer">
+          <div class="container">
+            <picture class="footer__logo">
+              <source srcset="images/icon/logo.svg" type="image/svg+xml">
+              <img loading="lazy" src="images/logo.png" alt="120/80">
+            </picture>
+            <p class="footer__info">2022. Все права защищены и принадлежат владельцу</p>
+            <p class="footer__info">В случае возникновения проблем или вопросов пишите на - <a href="mailto:support@supcours.ru">support@supcours.ru</a></p>
+            <div class="requisites">
+              <div class="requisites__block">
+                <p class="reqisites__text">ООО «АВОКАДО»</p>
+                <p class="reqisites__text">ИНН: 5446020349</p>
+                <p class="reqisites__text">ОГРН: 1195476030738</p>
+                <p class="reqisites__text">Телефон: +7 (977) 852-93-47</p>
+                <p class="reqisites__text">E-mail: <a href="mailto:support@supcours.ru">support@supcours.ru</a></p>
+              </div>
+              <div class="requisites__block">
+                <p class="reqisites__head">ПЛАТЕЖ ЗАЩИЩЕН</p>
+                <div class="requisites__images">
+                  <img src="images/pay/pay1.png" alt="" class="requisites__picture">
+                  <img src="images/pay/pay2.png" alt="" class="requisites__picture">
+                  <img src="images/pay/pay3.png" alt="" class="requisites__picture">
+                  <img src="images/pay/pay4.png" alt="" class="requisites__picture">
+                </div>
+                <p class="reqisites__head">ПРИНИМАЕМ К ОПЛАТЕ:</p>
+                <div class="requisites__images">
+                  <img src="images/pay/pay5.png" alt="" class="requisites__picture">
+                  <img src="images/pay/pay6.png" alt="" class="requisites__picture">
+                  <img src="images/pay/pay7.png" alt="" class="requisites__picture">
+                </div>
+              </div>
+              <div class="requisites__block requisites__block_last">
+                <a href="https://179523.selcdn.ru/public/rp/bs-offer-policy.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Политика конфиденциальности</a>
+                <a href="https://179523.selcdn.ru/public/rp/offer.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Оферта</a>
+                <a href="delete.html" target="_blank" class="footer__privacy footer__privacy_reqv">Отмена подписки</a>
+                <a href="https://179523.selcdn.ru/public/rp/permission.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Политика обработки данных</a>
+                <a href="https://179523.selcdn.ru/public/rp/tariff.pdf" target="_blank" class="footer__privacy footer__privacy_reqv">Тарифы</a>
+              </div>
+            </div>
+          </div>
+        </footer>
       </div>
     </section>
   </div>
